NO-JIRA fixing SQ issues, code smells, bugs